Keep java language level to 8: avoid List.of (language level 9)