@@ -8,7 +8,7 @@ import static java.util.Collections.emptyList;
 public class SimpleEnemyBuilder {
 
     private Armor armor = new SimpleArmor(5);
-    private List<Buff> buffs = List.of(new BasicBuff(1.0f, 1.0f));
+    private List<Buff> buffs = Arrays.asList(new BasicBuff(1.0f, 1.0f));
 
     public static SimpleEnemyBuilder anEnemy() {
         return new SimpleEnemyBuilder();
